# similar-words-app

./: .gitignore  app.py  pyproject.toml  requirements.txt
