[tool.poetry]
name = "similar-words-app"
version = "0.1.0"
description = ""
authors = ["johnprimavesi <johnprimavesi@gmail.com>"]
readme = "README.md"
packages = [{include = "similar_words_app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
gensim = "^4.3.2"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

